Revert "Merge remote-tracking branch 'origin/Fase-2-completo' into Fase-2-Paquete-6"
This reverts commit 0656018bf050cf0c9ccb9107322502b30387bf14, reversing
changes made to 170d6137f0dcdceac9f374c3b40231617905482e.

--- a/asivamosffie.web/asivamosffie/src/app/_pages/fase-preconstruccion/components/form-perfil/form-perfil.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/fase-preconstruccion/components/form-perfil/form-perfil.component.html
@@ -137,13 +137,17 @@
                       maxlength="3"
                       min="1"
                       max="999"
-                      #cantidadHvRequeridas
                       (keypress)="validateNumberKeypress($event)"
                       onKeyPress="if(this.value.length>=this.maxLength) return false;"
                   oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                       formControlName="cantidadHvRequeridas"
                       required
                       (ngModelChange)="validateNumber($event, i, 'cantidadHvRequeridas')"
+                      [class.invalid]="
+                        perfil.get('cantidadHvRequeridas').value.length > 0
+                          ? perfil.get('cantidadHvRequeridas').markAsUntouched()
+                          : perfil.get('cantidadHvRequeridas').markAsTouched()
+                      "
                     />
                   </mat-form-field>
                   <span
@@ -152,7 +156,7 @@
                     matTooltip="Campo numérico"
                     matTooltipClass="info-tooltip"
                   >
-                    {{ 3 - cantidadHvRequeridas.value.length }}
+                    {{ 3 - perfil.get('cantidadHvRequeridas').value.toString().length }}
                   </span>
                   <span class="icon-incompleto">
                     <img
@@ -196,13 +200,17 @@
                       maxlength="3"
                       min="1"
                       max="999"
-                      #cantidadHvRecibidas
                       (keypress)="validateNumberKeypress($event)"
                       onKeyPress="if(this.value.length>=this.maxLength) return false;"
                   oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                       formControlName="cantidadHvRecibidas"
                       required
                       (ngModelChange)="validateNumber($event, i, 'cantidadHvRecibidas')"
+                      [class.invalid]="
+                        perfil.get('cantidadHvRecibidas').value.length > 0
+                          ? perfil.get('cantidadHvRecibidas').markAsUntouched()
+                          : perfil.get('cantidadHvRecibidas').markAsTouched()
+                      "
                     />
                   </mat-form-field>
                   <span
@@ -211,7 +219,7 @@
                     matTooltip="Campo numérico"
                     matTooltipClass="info-tooltip"
                   >
-                    {{ 3 - cantidadHvRecibidas.value.length }}
+                    {{ 3 - perfil.get('cantidadHvRecibidas').value.toString().length }}
                   </span>
                   <span class="icon-incompleto">
                     <img
@@ -255,13 +263,17 @@
                       maxlength="3"
                       min="1"
                       max="999"
-                      #cantidadHvAprobadas
                       (keypress)="validateNumberKeypress($event)"
                       onKeyPress="if(this.value.length>=this.maxLength) return false;"
                   oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                       formControlName="cantidadHvAprobadas"
                       required
                       (ngModelChange)="validateNumber($event, i, 'cantidadHvAprobadas')"
+                      [class.invalid]="
+                        perfil.get('cantidadHvAprobadas').value.length > 0
+                          ? perfil.get('cantidadHvAprobadas').markAsUntouched()
+                          : perfil.get('cantidadHvAprobadas').markAsTouched()
+                      "
                     />
                   </mat-form-field>
                   <span
@@ -270,7 +282,7 @@
                     matTooltip="Campo numérico"
                     matTooltipClass="info-tooltip"
                   >
-                    {{ 3 - cantidadHvAprobadas.value.length }}
+                    {{ 3 - perfil.get('cantidadHvAprobadas').value.toString().length }}
                   </span>
                   <span class="icon-incompleto">
                     <img
@@ -323,6 +335,11 @@
                           perfil.get('cantidadHvRecibidas').value,
                           i
                         )
+                      "
+                      [class.invalid]="
+                        perfil.get('fechaAprobacion').value !== null
+                          ? perfil.get('fechaAprobacion').markAsUntouched()
+                          : perfil.get('fechaAprobacion').markAsTouched()
                       "
                     />
                     <mat-datepicker #fechaAprobacion></mat-datepicker>
