--- a/asivamosffie.web/asivamosffie/src/app/_pages/crear-proyecto-tecnico/components/tabla-proyectos-tecnico/tabla-proyectos-tecnico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/crear-proyecto-tecnico/components/tabla-proyectos-tecnico/tabla-proyectos-tecnico.component.html
@@ -47,44 +47,20 @@
       <td mat-cell *matCellDef="let element"> {{ element.estadoj }} </td>
     </ng-container>
 -->
-    <!-- <ng-container matColumnDef="estadop">
+    <ng-container matColumnDef="estadop">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del proyecto </th>
       <td mat-cell *matCellDef="let element"> {{ element.estadop }} </td>
-    </ng-container> -->
+    </ng-container>
 
     <ng-container matColumnDef="gestion">
       <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Gestión </th>
       <td mat-cell *matCellDef="let gestion">
-        <button 
-                mat-raised-button 
-                color="accent" 
-                class="btn-table m05_important" 
-                type="button"
-                (click)="ver(gestion.id)" 
-                *ngIf="gestion.gestion.estadoProyectoObra=='Disponible' && gestion.gestion.estadoProyectoInterventoria=='Disponible'">
-        Ver detalle /<br>Editar
-        </button>
-
-        <button 
-                mat-raised-button 
-                color="accent" 
-                class="btn-table m05_important" 
-                type="button"
-                (click)="ver(gestion.id)" 
-                *ngIf="gestion.gestion.estadoProyectoObra!='Disponible' || gestion.gestion.estadoProyectoInterventoria!='Disponible'">
-        Ver detalle
-        </button>
-
-        <button 
-                mat-raised-button 
-                color="accent" 
-                class="btn-table m05_important" 
-                type="button"
-                (click)="eliminar(gestion.id)"  
-                *ngIf="gestion.gestion.estadoProyectoObra=='Disponible' && gestion.gestion.estadoProyectoInterventoria=='Disponible'">
-        Eliminar
-        </button>
-
+        <button mat-raised-button color="accent" class="btn-table m05_important" type="button"
+          (click)="ver(gestion.id)" *ngIf="gestion.estadop=='Disponible'">Ver detalle /<br>Editar</button>
+          <button mat-raised-button color="accent" class="btn-table m05_important" type="button"
+          (click)="ver(gestion.id)" *ngIf="gestion.estadop!='Disponible'">Ver detalle</button>
+        <button mat-raised-button color="accent" class="btn-table m05_important" type="button"
+          (click)="eliminar(gestion.id)"  *ngIf="gestion.estadop=='Disponible'">Eliminar</button>
       </td>
     </ng-container>
 
