--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/tabla-fuentes/tabla-fuentes.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/tabla-fuentes/tabla-fuentes.component.html
@@ -55,23 +55,13 @@
             <ng-container matColumnDef="id">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
                 <td mat-cell *matCellDef="let element">
-                    <button 
-                            mat-raised-button 
-                            color="accent" 
-                            class="btn-table"
-                            (click)="editarFuente( element.aportante.tipoAportanteId, element.aportanteId )">
-                    Ver detalle/<br>Editar
-                    </button>
-
-                    <button 
-                            mat-raised-button 
-                            color="accent" 
-                            class="btn-table" 
-                            [disabled]="!element.registroCompleto"
-                            (click)="controlRecursosFuente(element.fuenteFinanciacionId )">
-                    Control de recursos
-                    </button>
-
+                    <button mat-raised-button color="accent" class="btn-table"
+                        (click)="editarFuente( element.aportante.tipoAportanteId, element.aportanteId )">Ver
+                        detalle/<br>Editar</button>
+                    <button mat-raised-button color="accent" class="btn-table"
+                        (click)="eliminarFuente(element.fuenteFinanciacionId )">Eliminar</button>
+                    <button mat-raised-button color="accent" class="btn-table" [disabled]="!element.registroCompleto"
+                        (click)="controlRecursosFuente(element.fuenteFinanciacionId )">Control de recursos</button>
                 </td>
             </ng-container>
 
