--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/tabla-observaciones/tabla-observaciones.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/tabla-observaciones/tabla-observaciones.component.html
@@ -3,24 +3,24 @@
     <div class="table-responsive">
       <table mat-table [dataSource]="dataSource" matSort>
         <!-- fecha Column -->
-        <ng-container matColumnDef="fechaCreacion">
+        <ng-container matColumnDef="fecha">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha</th>
           <td mat-cell *matCellDef="let element">
-            <b>{{ element.fechaCreacion | date: 'dd/MM/yyyy' }}</b>
+            <b>{{ element.fecha }}</b>
           </td>
         </ng-container>
 
         <!-- autor Column -->
-        <ng-container matColumnDef="usuarioCreacion">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Usuario creo</th>
-          <td mat-cell *matCellDef="let element">{{ element.usuarioCreacion }}</td>
+        <ng-container matColumnDef="autor">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Autor</th>
+          <td mat-cell *matCellDef="let element">{{ element.autor }}</td>
         </ng-container>
 
         <!-- observacion Column -->
         <ng-container matColumnDef="observacion">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Observación</th>
           <td mat-cell *matCellDef="let element">
-            <div [innerHTML]="innerObservacion(element.observacion)"></div>
+            {{ element.observacion }}
           </td>
         </ng-container>
 
