--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/form-observaciones-recibo-satisfaccion/form-observaciones-recibo-satisfaccion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/form-observaciones-recibo-satisfaccion/form-observaciones-recibo-satisfaccion.component.html
@@ -1,14 +1,14 @@
-<form [formGroup]="observaciones" novalidate (ngSubmit)="onSubmit()">
+<form [formGroup]="observaciones" novalidate (ngSubmit)="onSubmit(false)">
   <div class="row justify-content-center align-items-center">
     <div class="col-md-12">
       <div class="row justify-content-center align-items-center" style="width: 100%">
         <div class="pr-1">
-          <label class="label-left" for="tieneObservacionesValidacion">
+          <label class="label-left" for="tieneObservacionesCumplimiento">
             ¿Desde el grupo de novedades y liquidaciones tiene observaciones al recibo de satisfacción?
           </label>
         </div>
         <div>
-          <mat-radio-group class="radioInput" formControlName="tieneObservacionesValidacion">
+          <mat-radio-group class="radioInput" formControlName="tieneObservacionesCumplimiento">
             <mat-radio-button [value]="true"> Sí </mat-radio-button>
             <mat-radio-button [value]="false"> No </mat-radio-button>
           </mat-radio-group>
@@ -23,9 +23,9 @@
             matTooltip="Debe ingresar la información en el campo para continuar"
             matTooltipClass="info-tooltip"
             *ngIf="
-              (observaciones.get('tieneObservacionesValidacion').invalid &&
-                observaciones.get('tieneObservacionesValidacion').touched) ||
-              (observaciones.get('tieneObservacionesValidacion').invalid && estaEditando)
+              (observaciones.get('tieneObservacionesCumplimiento').invalid &&
+                observaciones.get('tieneObservacionesCumplimiento').touched) ||
+              (observaciones.get('tieneObservacionesCumplimiento').invalid && estaEditando)
             "
           />
         </span>
@@ -34,7 +34,7 @@
   </div>
   <div
     class="d-flex mt-2em align-items-center animatedDown"
-    *ngIf="observaciones.value.tieneObservacionesValidacion === true"
+    *ngIf="observaciones.value.tieneObservacionesCumplimiento === true"
   >
     <div
       class="text-area-quill"
@@ -91,9 +91,9 @@
       class="btn-guardar"
       type="submit"
       [disabled]="
-        observaciones.get('tieneObservacionesValidacion').value === null ||
-        observaciones.get('tieneObservacionesValidacion').value === undefined ||
-        (observaciones.get('tieneObservacionesValidacion').value === true && observaciones.get('observaciones').invalid)
+        observaciones.get('tieneObservacionesCumplimiento').value === null ||
+        observaciones.get('tieneObservacionesCumplimiento').value === undefined ||
+        (observaciones.get('tieneObservacionesCumplimiento').value === true && observaciones.get('observaciones').invalid)
       "
     >
       <img src="assets/img/icon/guardar.svg" alt="Regresar" />
