--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/home/home.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/home/home.component.html
@@ -4,7 +4,7 @@
       <img src="assets/img/icon/regresar.svg" alt="Regresar" />
     </a>
   </div>
-  <h1 class="title-menu--h1">Verificar informe final del proyecto</h1>
+  <h1 class="title-menu--h1">Validar cumplimiento informe final del proyecto</h1>
   <button mat-mini-fab color="primary" class="btn-info" (click)="verAyuda = !verAyuda">?</button>
 
   <div class="text-info" *ngIf="verAyuda">
