--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/revisar-informe/revisar-informe.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/revisar-informe/revisar-informe.component.html
@@ -7,26 +7,26 @@
   <div class="text-center">
     <h1 class="title-menu--h1">
       Revisar informe final
-      LJ776554
+      <b *ngIf="report"> {{ report.proyecto.llaveMen }} </b>
     </h1>
     <p class="colorMainColor mt-05em"> 
       <span class="mx-1em">
         Fecha de envío del informe final
         <b>
-          29/11/2020
+          {{ report.proyecto.informeFinal[0].fechaCreacion  | date:'dd/MM/yyyy' }}
         </b>
       </span>
       <span class="mx-1em">
         Fecha de aprobación del informe final
         <b>
-          29/11/2020
+          {{ report.proyecto.informeFinal[0].fechaAprobacion  | date:'dd/MM/yyyy' }}
         </b>
       </span>
     </p>
   </div>
 
-  <app-datos-del-proyecto></app-datos-del-proyecto>
-  <app-recibo-satisfaccion></app-recibo-satisfaccion>
-  <app-form-observaciones-recibo-satisfaccion></app-form-observaciones-recibo-satisfaccion>
-  <app-tabla-informe-final-anexos></app-tabla-informe-final-anexos>
+  <app-datos-del-proyecto *ngIf="report" [report]="report"></app-datos-del-proyecto>
+  <app-recibo-satisfaccion *ngIf="report" [report]="report"></app-recibo-satisfaccion>
+  <app-form-observaciones-recibo-satisfaccion *ngIf="report" [report]="report"></app-form-observaciones-recibo-satisfaccion>
+  <app-tabla-informe-final-anexos *ngIf="report" [report]="report"></app-tabla-informe-final-anexos>
 </section>
