--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/tabla-detalle-informe-final-anexos/tabla-detalle-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/tabla-detalle-informe-final-anexos/tabla-detalle-informe-final-anexos.component.html
@@ -18,7 +18,7 @@
               <ng-container matColumnDef="No">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>No.</th>
                 <td mat-cell *matCellDef="let element">
-                  <b>{{ element.No }}</b>
+                  <b>{{ element.informeFinalListaChequeo.posicion }}</b>
                 </td>
               </ng-container>
 
@@ -26,31 +26,56 @@
               <ng-container matColumnDef="item">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Ítem</th>
                 <td mat-cell *matCellDef="let element">
-                  {{ element.item }}
+                  {{ element.informeFinalListaChequeo.nombre }}
                 </td>
               </ng-container>
 
               <!-- tipoAnexo Column -->
-              <ng-container matColumnDef="tipoAnexo">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Tipo de anexo</th>
+              <ng-container matColumnDef="tipoAnexoString">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                  Tipo de anexo
+                </th>
                 <td mat-cell *matCellDef="let element">
-                  {{ element.tipoAnexo }}
+                  <div *ngIf="element.calificacionCodigo === '1'">
+                    <span [class.color-secondaryColor]="element.validacionCodigo === '' && estaEditando">
+                      {{ element.informeFinalAnexo.tipoAnexoString }}
+                    </span>
+                  </div>
                 </td>
               </ng-container>
 
               <!-- Ubicacion Column -->
               <ng-container matColumnDef="Ubicacion">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Ubicación (url/radicado)</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                  Ubicación (url/radicado)
+                </th>
                 <td mat-cell *matCellDef="let element">
-                  {{ element.Ubicacion }}
+                  <div
+                    *ngIf="element.calificacionCodigo === '1'"
+                    [class.color-secondaryColor]="element.validacionCodigo === '' && estaEditando"
+                  >
+                    <!--Físico-->
+                    <span *ngIf="element.informeFinalAnexo.tipoAnexo === '1'">
+                      <b>SAC:</b>
+                      {{ element.informeFinalAnexo.numRadicadoSac }} <br />
+                      <b>Fecha:</b>
+                      {{ element.informeFinalAnexo.fechaRadicado | date: 'dd/MM/yyyy' }}
+                    </span>
+                    <!--Digital-->
+                    <span *ngIf="element.informeFinalAnexo.tipoAnexo === '2'">
+                      {{ element.informeFinalAnexo.urlSoporte }}
+                    </span>
+                  </div>
                 </td>
               </ng-container>
 
-              <!-- verificacion Column -->
-              <ng-container matColumnDef="verificacion">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Validación</th>
+              <!-- validacion Column -->
+              <ng-container matColumnDef="aprobacionCodigo">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                  Validación
+                </th>
                 <td mat-cell *matCellDef="let element">
-                  {{ element.verificacion }}
+                  {{ element.aprobacionCodigoString }}
                 </td>
               </ng-container>
 
@@ -68,7 +93,30 @@
         </div>
       </section>
 
-      <app-verificacion-novedades></app-verificacion-novedades>
+      <mat-card class="shipping-card var-main-gris" *ngIf="existeObservacionInterventoria">
+        <mat-card-header class="header-card header-card--margin">
+          <mat-card-title class="mat-card-title header-card--text">
+            Verificación del grupo de novedades y liquidaciones
+          </mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <p>
+            <strong>
+              {{ report.proyecto.informeFinal[0].informeFinalObservacionesInterventoria[0].fechaCreacion | date:'dd/MM/yyyy' }} 
+            </strong>
+          </p>
+          <p>
+            <strong>
+              ¿Desde el grupo de novedades y liquidaciones tiene observaciones al informe final del proyecto?:
+            </strong>
+            <span *ngIf="report.proyecto.informeFinal[0].tieneObservacionesInterventoria"> Si</span>
+            <span *ngIf="!report.proyecto.informeFinal[0].tieneObservacionesInterventoria"> No</span>
+          </p>
+          <p *ngIf="report.proyecto.informeFinal[0].tieneObservacionesInterventoria" [innerHTML]="report.proyecto.informeFinal[0].informeFinalObservacionesInterventoria[0].observaciones">
+          </p>
+        </mat-card-content>
+      </mat-card>
+      <!--<app-verificacion-novedades></app-verificacion-novedades>!-->
     </mat-expansion-panel>
   </mat-accordion>
 </div>
