--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
@@ -8,7 +8,9 @@
   <mat-accordion>
     <mat-expansion-panel class="expansion-style">
       <mat-expansion-panel-header class="expansion-style--header">
-        <mat-panel-title class="expansion-style--title"> Informe final y anexos </mat-panel-title>
+        <mat-panel-title class="expansion-style--title">
+                Informe final y anexos
+        </mat-panel-title>
       </mat-expansion-panel-header>
       <section class="text-center">
         <div class="tabla-gris">
@@ -20,7 +22,7 @@
                   No.
                 </th>
                 <td mat-cell *matCellDef="let element">
-                  <b>{{ element.No }}</b>
+                  <b>{{ element.informeFinalListaChequeo.posicion }}</b>
                 </td>
               </ng-container>
 
@@ -30,37 +32,52 @@
                   Ítem
                 </th>
                 <td mat-cell *matCellDef="let element">
-                  {{ element.item }}
+                  {{ element.informeFinalListaChequeo.nombre }}
                 </td>
               </ng-container>
 
               <!-- tipoAnexo Column -->
-              <ng-container matColumnDef="tipoAnexo">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                  Tipo de anexo
-                </th>
+              <ng-container matColumnDef="tipoAnexoString">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Tipo de anexo</th>
                 <td mat-cell *matCellDef="let element">
-                  {{ element.tipoAnexo }}
+                  <div *ngIf="element.calificacionCodigo === '1'">
+                    <span [class.color-secondaryColor]="element.validacionCodigo === '' && estaEditando">
+                      {{ element.informeFinalAnexo.tipoAnexoString }}
+                    </span>
+                  </div>
                 </td>
               </ng-container>
 
               <!-- Ubicacion Column -->
               <ng-container matColumnDef="Ubicacion">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                  Ubicación (url/radicado)
-                </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Ubicación (url/radicado)</th>
                 <td mat-cell *matCellDef="let element">
-                  {{ element.Ubicacion }}
+                  <div
+                    *ngIf="element.calificacionCodigo === '1'"
+                    [class.color-secondaryColor]="element.validacionCodigo === '' && estaEditando"
+                  >
+                    <!--Físico-->
+                    <span *ngIf="element.informeFinalAnexo.tipoAnexo === '1'">
+                      <b>SAC:</b>
+                      {{ element.informeFinalAnexo.numRadicadoSac }} <br />
+                      <b>Fecha:</b>
+                      {{ element.informeFinalAnexo.fechaRadicado | date: 'dd/MM/yyyy' }}
+                    </span>
+                    <!--Digital-->
+                    <span *ngIf="element.informeFinalAnexo.tipoAnexo === '2'">
+                      {{ element.informeFinalAnexo.urlSoporte }}
+                    </span>
+                  </div>
                 </td>
               </ng-container>
 
               <!-- verificacion Column -->
-              <ng-container matColumnDef="verificacion">
+              <ng-container matColumnDef="AprobacionCodigoString">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>
                   Validación
                 </th>
                 <td mat-cell *matCellDef="let element">
-                  {{ element.verificacion }}
+                  {{ element.AprobacionCodigoString }}
                 </td>
               </ng-container>
 
@@ -77,7 +94,7 @@
           ></mat-paginator>
         </div>
       </section>
-      <app-form-observaciones-informe-final-anexos></app-form-observaciones-informe-final-anexos>
+      <app-form-observaciones-informe-final-anexos *ngIf="id" [id]="id"></app-form-observaciones-informe-final-anexos>
     </mat-expansion-panel>
   </mat-accordion>
 </div>
