--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/tabla-informe-final/tabla-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/tabla-informe-final/tabla-informe-final.component.html
@@ -11,12 +11,12 @@
 <div class="table-responsive mb-2em">
   <table mat-table [dataSource]="dataSource" matSort>
     <!-- fechaEnvio Column -->
-    <ng-container matColumnDef="fechaEnvio">
+    <ng-container matColumnDef="fechaCreacion">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Fecha de envío del informe final
       </th>
       <td mat-cell *matCellDef="let element">
-        <b>{{ element.fechaEnvio }}</b>
+        <b>{{ element.fechaCreacion  | date:'dd/MM/yyyy'}}</b>
       </td>
     </ng-container>
 
@@ -26,7 +26,7 @@
         Fecha de aprobación del informe final
       </th>
       <td mat-cell *matCellDef="let element">
-        <b>{{ element.fechaAprobacion }}</b>
+        <b>{{ element.fechaAprobacion | date:'dd/MM/yyyy'}}</b>
       </td>
     </ng-container>
 
@@ -35,7 +35,7 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Llave MEN
       </th>
-      <td mat-cell *matCellDef="let element">{{ element.llaveMen }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.proyecto.llaveMen }}</td>
     </ng-container>
 
     <!-- tipoIntervencion Column -->
@@ -43,7 +43,7 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Tipo de intervención
       </th>
-      <td mat-cell *matCellDef="let element">{{ element.tipoIntervencion }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.proyecto.tipoIntervencionString }}</td>
     </ng-container>
 
     <!-- institucionEducativa Column -->
@@ -52,7 +52,7 @@
         Institución Educativa
       </th>
       <td mat-cell *matCellDef="let element">
-        {{ element.institucionEducativa }}
+        {{ element.proyecto.institucionEducativa.nombre }}
       </td>
     </ng-container>
 
@@ -61,16 +61,16 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Sede
       </th>
-      <td mat-cell *matCellDef="let element">{{ element.sedeEducativa }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.proyecto.sede.nombre }}</td>
     </ng-container>
 
     <!-- estadoVerificacion Column -->
-    <ng-container matColumnDef="estadoVerificacion">
+    <ng-container matColumnDef="estadoCumplimientoString">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Estado de la verificación
+        Estado de la validación
       </th>
       <td mat-cell *matCellDef="let element">
-        {{ element.estadoVerificacion }}
+        {{ element.estadoCumplimientoString }}
       </td>
     </ng-container>
 
@@ -80,14 +80,48 @@
         Gestión
       </th>
       <td mat-cell *matCellDef="let element">
-        <a
+        <button
+          *ngIf="!element.tieneObservacionesInterventoria && element.estadoCumplimiento === '1'"
+            mat-button
+            mat-raised-button
+            color="accent"
+            class="btn-table"
+            type="button"
+            (click)="approveFinalReportByFulfilment(element.proyectoId)"
+          >
+          Validar Informe Final <!--TieneObservacionesInterventoria (false) && en proceso de validación cumplimiento-->
+        </button>
+        <button
+          *ngIf="element.tieneObservacionesInterventoria && element.estadoCumplimiento === '1'"
+            mat-button
+            mat-raised-button
+            color="accent"
+            class="btn-table"
+            type="button"
+            (click)="sendFinalReportToSupervision(element.proyectoId)"
+          >
+          Enviar al supervisor <!--TieneObservacionesInterventoria (true) && en proceso de validación cumplimiento-->
+        </button>
+        <a *ngIf="!(element.estadoCumplimiento === '2' || element.estadoCumplimiento === '3')"
           mat-button
           mat-raised-button
           color="accent"
           class="btn-table"
           [routerLink]="['revisarInforme', element.id]"
         >
-        Revisar informe
+          <span *ngIf="element.estadoCumplimiento == null || element.estadoCumplimiento === '0'">Revisar informe</span> <!--Null o 0-->
+          <span *ngIf="element.estadoCumplimiento != null && element.estadoCumplimiento !== '0' && element.estadoCumplimiento === '1'">ver Detalle/Editar</span><!--En proceso de validación de cumplimiento-->
+        </a>
+        <a
+        *ngIf="element.estadoCumplimiento === '2' || element.estadoCumplimiento === '3'"
+          mat-button
+          mat-raised-button
+          color="accent"
+          class="btn-table"
+          type="button"
+          [routerLink]="['verDetalle', element.proyectoId]"
+        >
+          Ver detalle <!--Con observaciones de liquidación y/o informe validado -->
         </a>
       </td>
     </ng-container>
