--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/tabla-en-proceso-de-firmas-rlc/tabla-en-proceso-de-firmas-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/tabla-en-proceso-de-firmas-rlc/tabla-en-proceso-de-firmas-rlc.component.html
@@ -40,6 +40,9 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
             <td mat-cell *matCellDef="let element">
                 <button mat-raised-button color="accent" class="btn-table"
+                (click)="this.verDetalleEditar(element.id)" *ngIf="element.estadoRegistro=='Completo'&&element.estadoDocumento=='Firmado'">
+                Liquidar</button>
+                <button mat-raised-button color="accent" class="btn-table"
                 (click)="this.verDetalleEditar(element.id)">
                 Ver detalle/Editar</button>
             </td>
