--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/actualizacion-poliza-gtlc/actualizacion-poliza-gtlc.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/actualizacion-poliza-gtlc/actualizacion-poliza-gtlc.component.scss
@@ -12,3 +12,9 @@ table td{
     border-color: #474747;
     color: #474747;
 }
+.izqTitle{
+    text-align: left;
+}
+.justCenter{
+    justify-content: center;
+}
