--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/verificar-requisitos-gtlc/verificar-requisitos-gtlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/verificar-requisitos-gtlc/verificar-requisitos-gtlc.component.html
@@ -35,7 +35,7 @@
                     Balance financiero
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            2
+            <app-tabla-balance-financiero-gtlc [verDetalleBtn]=false></app-tabla-balance-financiero-gtlc>
         </mat-expansion-panel>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
