--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-cc-general/control-y-tabla-cc-general.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-cc-general/control-y-tabla-cc-general.component.html
@@ -95,17 +95,17 @@
                             Cerrar trámite
                         </button>
                         <button mat-raised-button color="accent" class="btn-table"
-                            *ngIf="element.estadoControversiaCodigo=='4'"
+                            *ngIf="element.estadoControversiaCodigo=='4' && element.registroCompletoNombre=='Completo'"
                             (click)="this.sendTramiteToComite(element.controversiaContractualId)">
                             Enviar trámite a comité técnico
                         </button>
                         <button mat-raised-button color="accent" class="btn-table"
-                            *ngIf="element.estadoControversiaCodigo=='1' || element.estadoControversiaCodigo=='3' || element.estadoControversiaCodigo=='4'"
+                            *ngIf="(element.estadoControversiaCodigo=='1' || element.estadoControversiaCodigo=='3' || element.estadoControversiaCodigo=='4')&& element.registroCompletoNombre=='Incompleto'"
                             (click)=this.verDetalleEditarTramiteButton(element.controversiaContractualId);>
                             Ver detalle/Editar
                         </button>
                         <button mat-raised-button color="accent" class="btn-table"
-                            *ngIf="element.estadoControversiaCodigo=='1' || element.estadoControversiaCodigo=='3' || element.estadoControversiaCodigo=='4'"
+                            *ngIf="(element.estadoControversiaCodigo=='1' || element.estadoControversiaCodigo=='3' || element.estadoControversiaCodigo=='4')&& element.registroCompletoNombre=='Incompleto'"
                             (click)=this.deleteControversia(element.controversiaContractualId);>
                             Eliminar
                         </button>
@@ -120,7 +120,7 @@
                             Actualizar trámite
                         </button>
                         <button mat-raised-button color="accent" class="btn-table"
-                            *ngIf="element.estadoControversiaCodigo=='2' || element.estadoControversiaCodigo=='5' || element.estadoControversiaCodigo=='6' || element.estadoControversiaCodigo=='7' || element.estadoControversiaCodigo=='8' || element.estadoControversiaCodigo=='9' || element.estadoControversiaCodigo=='10'"
+                            *ngIf="(element.estadoControversiaCodigo=='2' || element.estadoControversiaCodigo=='5' || element.estadoControversiaCodigo=='6' || element.estadoControversiaCodigo=='7' || element.estadoControversiaCodigo=='8' || element.estadoControversiaCodigo=='9' || element.estadoControversiaCodigo=='10')&& element.registroCompletoNombre=='Completo'"
                             (click)="this.verDetalleButton(element.controversiaContractualId)">
                             Ver detalle
                         </button>
