--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/form-solicitar-contratacion/form-solicitar-contratacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/form-solicitar-contratacion/form-solicitar-contratacion.component.html
@@ -13,8 +13,8 @@
       <label class="label-left" for="esMultiple">¿Es multi proyecto?</label>
     </div>
     <mat-radio-group class="radioInput" [formControl]="esMultiple">
-      <mat-radio-button value="true">Sí</mat-radio-button>
-      <mat-radio-button value="false">No</mat-radio-button>
+      <mat-radio-button [value]="true">Sí</mat-radio-button>
+      <mat-radio-button [value]="false">No</mat-radio-button>
     </mat-radio-group>
     <span class="required-form-group">*</span>
   </div>
