--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/tabla-resultados/tabla-resultados.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/tabla-resultados/tabla-resultados.component.html
@@ -39,7 +39,7 @@
             </ng-container>
 
             <ng-container matColumnDef="sede">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Solicitud generada </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 10em;"> Solicitud generada </th>
                 <td mat-cell *matCellDef="let element">
                     <section>
                         <div>
