--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/tabla-contr-intrvn-fdos-constr/tabla-contr-intrvn-fdos-constr.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/tabla-contr-intrvn-fdos-constr/tabla-contr-intrvn-fdos-constr.component.html
@@ -52,7 +52,7 @@
                                                     color="accent" 
                                                     class="btn-table"
                                                     *ngIf="element.estadoActa=='Con acta preliminar generada' || element.estadoActa=='Con validacion del supervisor'"
-                                                    (click)="this.enviarActaParaFirma(element.contratoId)">
+                                                    (click)="this.enviarActaParaFirma(element.contratoId, element.numeroContratoObra)">
                         Enviar acta para firma
                         </button>
                    
