--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/form-registrar-novedad/form-registrar-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/form-registrar-novedad/form-registrar-novedad.component.html
@@ -94,6 +94,7 @@
           </div>
         </div>
       </div>
+    <!--
       <div class="row">
         <div class="col-md-12">
           <div class="row">
@@ -299,7 +300,7 @@
           </div>
         </div>
       </div>
-
+    -->
     </mat-card-content>
   </mat-card>
   <div class="text-center">
@@ -308,3 +309,6 @@
     </button>
   </div>
 </form>
+<div class="animatedDown" *ngIf="addressForm.controls.tipoNovedad.value">
+  <app-accordion-novedades [tiposNovedadModificacionContractual]="tipoNovedadArray"></app-accordion-novedades>
+</div>
