--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/ver-detalle-interventoria/ver-detalle-interventoria.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/ver-detalle-interventoria/ver-detalle-interventoria.component.html
@@ -108,83 +108,131 @@
             </strong>
             Modificación de Condiciones Contractuales
           </p>
-          <p>
-            <strong>
-              Motivos de la novedad :
-            </strong>
-            Otra
-          </p>
-          <p>
-            <strong>
-              Resumen de la justificación de la novedad:
-            </strong>
-            <span class="d-block">
-              Es necesario ajustar la cantidad de reportes para llevar un control interno y evaluaciar el avance en el
-              cronograma de la obra.
-            </span>
-          </p>
-          <p>
-            <strong>
-              Cláusula a modificar 1:
-            </strong>
-            <span class="d-block">
-              Claúsula 5.2. Periodo de informes.
-            </span>
-          </p>
-          <p>
-            <strong>
-              Ajuste solicitado a la cláusula 1:
-            </strong>
-            <span class="d-block">
-              El contratista debe entregar un reporte mensual con pruebas físicas del avance de la obra.
-            </span>
-          </p>
-          <p>
-            <strong>
-              Cláusula a modificar 2:
-            </strong>
-            <span class="d-block">
-              Claúsula 5.1. Responsable de informes.
-            </span>
-          </p>
-          <p>
-            <strong>
-              Ajuste solicitado a la cláusula 2:
-            </strong>
-            <span class="d-block">
-              El Contratista es el responsable de enviar los informes con los respectivios soportes físicos.
-            </span>
-          </p>
-          <p>
-            <strong>
-              ¿Cuenta con la documentación soporte suficiente?:
-            </strong>
-            Sí
-          </p>
-          <p>
-            <strong>
-              Concepto técnico:
-            </strong>
-            <span class="d-block">
-              Se considera necesario el reporte mensual para evaluar el avance de la obra.
-            </span>
-          </p>
-          <p>
-            <strong>
-              Fecha concepto técnico:
-            </strong>
-            30/10/2020
-          </p>
-          <p>
-            <strong>
-              Número de radicado en FFIE de solicitud:
-            </strong>
-            NR-N54344-001
-          </p>
 
         </mat-card-content>
       </mat-card>
-
+      <mat-accordion>
+        <mat-expansion-panel class="expansion-style sub-expansion">
+          <mat-expansion-panel-header class="expansion-style--header">
+            <mat-panel-title class="expansion-style--title">
+              Novedad 1
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          <mat-card class="shipping-card var-main-gris">
+            <mat-card-header class="header-card header-card--margin">
+              <mat-card-title class="header-card--text textoGris">
+                Suspensión
+              </mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+              <p><strong>Motivos de la novedad :</strong>xxxxxxxx </p>
+              <p><strong>Resumen de la justificación de la novedad: </strong></p>
+              <p>
+                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+              </p>
+              <mat-card-title class="header-card--text sub-text">
+                Plazo solicitado
+              </mat-card-title>
+              <p><strong>Fecha de inicio de la suspensión: </strong> xxxxxxxxxxxxxxxxxx</p>
+              <p><strong>Fecha final de la suspensión: </strong> xxxxxxxxxxxxxxxxxx</p>
+              <p><strong>¿Cuenta con la documentación soporte suficiente?: </strong> No</p>
+              <p><strong>Concepto técnico: </strong></p>
+              <p>
+                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+              </p>
+              <p><strong>Fecha concepto técnico: </strong> xxxxxxxxxxxxxxxxxx</p>
+              <p><strong>Número de radicado en FFIE de solicitud: </strong> xxxxxxxxxxxxxxxxxx</p>
+            </mat-card-content>
+          </mat-card>
+        </mat-expansion-panel>
+        <mat-expansion-panel class="expansion-style sub-expansion">
+          <mat-expansion-panel-header class="expansion-style--header">
+            <mat-panel-title class="expansion-style--title">
+              Novedad 2
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          <mat-card class="shipping-card var-main-gris">
+            <mat-card-header class="header-card header-card--margin">
+              <mat-card-title class="header-card--text textoGris">
+                Adición
+              </mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+              <p><strong>Motivos de la novedad :</strong>xxxxxxxx </p>
+              <p><strong>Resumen de la justificación de la novedad: </strong></p>
+              <p>
+                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+              </p>
+              <p><strong>Presupuesto adicional solicitado:</strong>xxxxxxxxxxxxx </p>
+              <p><strong>¿Cuenta con la documentación soporte suficiente?:</strong>No </p>
+              <p><strong>Concepto técnico: </strong></p>
+              <p>
+                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+              </p>
+              <p><strong>Fecha concepto técnico: </strong> xxxxxxxxxxxxxxxxxx</p>
+              <p><strong>Número de radicado en FFIE de solicitud: </strong> xxxxxxxxxxxxxxxxxx</p>
+            </mat-card-content>
+          </mat-card>
+        </mat-expansion-panel>
+        <mat-expansion-panel class="expansion-style sub-expansion">
+          <mat-expansion-panel-header class="expansion-style--header">
+            <mat-panel-title class="expansion-style--title">
+              Novedad 3
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          <mat-card class="shipping-card var-main-gris">
+            <mat-card-header class="header-card header-card--margin">
+              <mat-card-title class="header-card--text textoGris">
+                Modificaciones de condiciones contractuales
+              </mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+              <p><strong>Motivos de la novedad :</strong>xxxxxxxx </p>
+              <p><strong>Resumen de la justificación de la novedad: </strong></p>
+              <p>
+                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+              </p>
+              <mat-card-title class="header-card--text sub-text">
+                Clausula 1
+              </mat-card-title>
+              <p><strong>Cláusula a modificar: </strong></p>
+              <p>
+                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+              </p>
+              <p><strong>Ajuste solicitado a la cláusula: </strong></p>
+              <p>
+                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+              </p>
+              <mat-card-title class="header-card--text sub-text">
+                Clausula 2
+              </mat-card-title>
+              <p><strong>Cláusula a modificar: </strong></p>
+              <p>
+                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+              </p>
+              <p><strong>Ajuste solicitado a la cláusula: </strong></p>
+              <p>
+                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+              </p>
+              <p><strong>¿Cuenta con la documentación soporte suficiente?:</strong>No </p>
+              <p><strong>Concepto técnico: </strong></p>
+              <p>
+                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+              </p>
+              <p><strong>Fecha concepto técnico: </strong> xxxxxxxxxxxxxxxxxx</p>
+              <p><strong>Número de radicado en FFIE de solicitud: </strong> xxxxxxxxxxxxxxxxxx</p>
+            </mat-card-content>
+          </mat-card>
+        </mat-expansion-panel>
+        <mat-expansion-panel class="expansion-style sub-expansion">
+          <mat-expansion-panel-header class="expansion-style--header">
+            <mat-panel-title class="expansion-style--title">
+              Novedad 4
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          
+        </mat-expansion-panel>
+      </mat-accordion>
     </mat-expansion-panel>
     <mat-expansion-panel class="expansion-style">
       <mat-expansion-panel-header class="expansion-style--header">
