--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/ver-detalle-solicitud/ver-detalle-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/ver-detalle-solicitud/ver-detalle-solicitud.component.html
@@ -110,199 +110,159 @@
           Registrar novedad
         </mat-panel-title>
       </mat-expansion-panel-header>
-
-      <mat-card class="shipping-card var-main-gris" *ngIf="false">
+      <mat-card class="shipping-card var-main-gris">
         <mat-card-content>
           <p>
             <strong>
-              Instancia donde se presentó la solicitud:
-            </strong>
-            Comité de obra
-          </p>
-          <p>
-            <strong>
-              Fecha de la sesión de la instancia:
-            </strong>
-            12/10/2020
-          </p>
-          <p>
-            <strong>
-              Tipo de Novedad:
-            </strong>
-            Modificación de Condiciones Contractuales
-          </p>
-          <p>
-            <strong>
-              Motivos de la novedad:
-            </strong>
-            Otra
-          </p>
-          <p>
-            <strong>
-              Resumen de la justificación de la novedad:
-            </strong>
-            <span class="d-block">
-              Es necesario ajustar la cantidad de reportes para llevar un control interno y evaluaciar el avance en el
-              cronograma de la obra.
-            </span>
-          </p>
-          <p>
-            <strong>
-              Cláusula a modificar 1:
-            </strong>
-            <span class="d-block">
-              Claúsula 5.2. Periodo de informes.
-            </span>
-          </p>
-          <p>
-            <strong>
-              Ajuste solicitado a la cláusula 1:
-            </strong>
-            <span class="d-block">
-              El contratista debe entregar un reporte mensual con pruebas físicas del avance de la obra.
-            </span>
-          </p>
-          <p>
-            <strong>
-              Cláusula a modificar 2:
-            </strong>
-            <span class="d-block">
-              Claúsula 5.1. Responsable de informes.
-            </span>
-          </p>
-          <p>
-            <strong>
-              Ajuste solicitado a la cláusula 2:
-            </strong>
-            <span class="d-block">
-              El Contratista es el responsable de enviar los informes con los respectivios soportes físicos.
-            </span>
-          </p>
-          <p>
-            <strong>
-              ¿Cuenta con la documentación soporte suficiente? :
-            </strong>
-            Sí
-          </p>
-          <p>
-            <strong>
-              Concepto técnico:
-            </strong>
-            <span class="d-block">
-              Se considera necesario el reporte mensual para evaluar el avance de la obra.
-            </span>
-          </p>
-          <p>
-            <strong>
-              Fecha concepto técnico:
-            </strong>
-            30/10/2020
-          </p>
-          <p>
-            <strong>
-              Número de radicado en FFIE de solicitud:
-            </strong>
-            NR-N54344-001
-          </p>
-        </mat-card-content>
-      </mat-card>
-
-      <mat-card class="shipping-card var-main-gris" *ngIf="true">
-        <mat-card-content>
-          <p>
-            <strong>
-              Fecha de solicitud de la novedad:
+              Fecha de solicitud de la novedad :
             </strong>
             17/10/2020
           </p>
           <p>
             <strong>
-              Instancia donde se presentó la solicitud:
+              Instancia donde se presentó la solicitud :
             </strong>
-            No aplica
-          </p>
-          <p>
-            <strong>
-              Tipo de Novedad:
-            </strong>
-            Suspensión
-          </p>
-          <p>
-            <strong>
-              Motivos de la novedad:
-            </strong>
-            Otra
-          </p>
-          <p>
-            <strong>
-              Resumen de la justificación de la novedad:
-            </strong>
-            <span class="d-block">
-              Es necesario ajustar la cantidad de reportes para llevar un control interno y evaluaciar el avance en el
-              cronograma de la obra.
+            <span>
+              Comité de obra
             </span>
           </p>
           <p>
             <strong>
-              Motivos de la novedad:
+              Fecha de la sesión de la instancia :
             </strong>
-            <span class="d-block">
-              Desastres naturales
-            </span>
+            12/10/2020
+          </p>
+          <p>
+            <strong>
+              Tipo de Novedad :
+            </strong>
+            Modificación de Condiciones Contractuales
           </p>
 
-          <mat-card-title class="header-card--text sub-text">
-            Datos del contrato
-          </mat-card-title>
-          <p>
-            <strong>
-              Plazo solicitado
-            </strong>
-              01/12/2020
-          </p>
-          <p>
-            <strong>
-              Fecha final de la suspensión:
-            </strong>
-            03/02/2020
-          </p>
-          <p>
-            <strong>
-              ¿Cuenta con la documentación soporte suficiente?:
-            </strong>
-            Sí
-          </p>
-          <p>
-            <strong>
-              Concepto técnico
-            </strong>
-            <span class="d-block">
-              Se evalúa la documentación y se evidencia que se requiere generar la novedad contractual por la calamidad presentada.
-            </span>
-          </p>
-          <p>
-            <strong>
-              Concepto técnico:
-            </strong>
-            <span class="d-block">
-              Se considera necesario el reporte mensual para evaluar el avance de la obra.
-            </span>
-          </p>
-          <p>
-            <strong>
-              Fecha concepto técnico:
-            </strong>
-            20/10/2020
-          </p>
-          <p>
-            <strong>
-              Número de radicado en FFIE de solicitud:
-            </strong>
-            NR-N54344-001
-          </p>
         </mat-card-content>
       </mat-card>
-
+      <mat-accordion>
+        <mat-expansion-panel class="expansion-style sub-expansion">
+          <mat-expansion-panel-header class="expansion-style--header">
+            <mat-panel-title class="expansion-style--title">
+              Novedad 1
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          <mat-card class="shipping-card var-main-gris">
+            <mat-card-header class="header-card header-card--margin">
+              <mat-card-title class="header-card--text textoGris">
+                Suspensión
+              </mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+              <p><strong>Motivos de la novedad :</strong>xxxxxxxx </p>
+              <p><strong>Resumen de la justificación de la novedad: </strong></p>
+              <p>
+                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+              </p>
+              <mat-card-title class="header-card--text sub-text">
+                Plazo solicitado
+              </mat-card-title>
+              <p><strong>Fecha de inicio de la suspensión: </strong> xxxxxxxxxxxxxxxxxx</p>
+              <p><strong>Fecha final de la suspensión: </strong> xxxxxxxxxxxxxxxxxx</p>
+              <p><strong>¿Cuenta con la documentación soporte suficiente?: </strong> No</p>
+              <p><strong>Concepto técnico: </strong></p>
+              <p>
+                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+              </p>
+              <p><strong>Fecha concepto técnico: </strong> xxxxxxxxxxxxxxxxxx</p>
+              <p><strong>Número de radicado en FFIE de solicitud: </strong> xxxxxxxxxxxxxxxxxx</p>
+            </mat-card-content>
+          </mat-card>
+        </mat-expansion-panel>
+        <mat-expansion-panel class="expansion-style sub-expansion">
+          <mat-expansion-panel-header class="expansion-style--header">
+            <mat-panel-title class="expansion-style--title">
+              Novedad 2
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          <mat-card class="shipping-card var-main-gris">
+            <mat-card-header class="header-card header-card--margin">
+              <mat-card-title class="header-card--text textoGris">
+                Adición
+              </mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+              <p><strong>Motivos de la novedad :</strong>xxxxxxxx </p>
+              <p><strong>Resumen de la justificación de la novedad: </strong></p>
+              <p>
+                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+              </p>
+              <p><strong>Presupuesto adicional solicitado:</strong>xxxxxxxxxxxxx </p>
+              <p><strong>¿Cuenta con la documentación soporte suficiente?:</strong>No </p>
+              <p><strong>Concepto técnico: </strong></p>
+              <p>
+                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+              </p>
+              <p><strong>Fecha concepto técnico: </strong> xxxxxxxxxxxxxxxxxx</p>
+              <p><strong>Número de radicado en FFIE de solicitud: </strong> xxxxxxxxxxxxxxxxxx</p>
+            </mat-card-content>
+          </mat-card>
+        </mat-expansion-panel>
+        <mat-expansion-panel class="expansion-style sub-expansion">
+          <mat-expansion-panel-header class="expansion-style--header">
+            <mat-panel-title class="expansion-style--title">
+              Novedad 3
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          <mat-card class="shipping-card var-main-gris">
+            <mat-card-header class="header-card header-card--margin">
+              <mat-card-title class="header-card--text textoGris">
+                Modificaciones de condiciones contractuales
+              </mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+              <p><strong>Motivos de la novedad :</strong>xxxxxxxx </p>
+              <p><strong>Resumen de la justificación de la novedad: </strong></p>
+              <p>
+                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+              </p>
+              <mat-card-title class="header-card--text sub-text">
+                Clausula 1
+              </mat-card-title>
+              <p><strong>Cláusula a modificar: </strong></p>
+              <p>
+                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+              </p>
+              <p><strong>Ajuste solicitado a la cláusula: </strong></p>
+              <p>
+                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+              </p>
+              <mat-card-title class="header-card--text sub-text">
+                Clausula 2
+              </mat-card-title>
+              <p><strong>Cláusula a modificar: </strong></p>
+              <p>
+                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+              </p>
+              <p><strong>Ajuste solicitado a la cláusula: </strong></p>
+              <p>
+                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+              </p>
+              <p><strong>¿Cuenta con la documentación soporte suficiente?:</strong>No </p>
+              <p><strong>Concepto técnico: </strong></p>
+              <p>
+                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+              </p>
+              <p><strong>Fecha concepto técnico: </strong> xxxxxxxxxxxxxxxxxx</p>
+              <p><strong>Número de radicado en FFIE de solicitud: </strong> xxxxxxxxxxxxxxxxxx</p>
+            </mat-card-content>
+          </mat-card>
+        </mat-expansion-panel>
+        <mat-expansion-panel class="expansion-style sub-expansion">
+          <mat-expansion-panel-header class="expansion-style--header">
+            <mat-panel-title class="expansion-style--title">
+              Novedad 4
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          
+        </mat-expansion-panel>
+      </mat-accordion>
     </mat-expansion-panel>
     <mat-expansion-panel class="expansion-style">
       <mat-expansion-panel-header class="expansion-style--header">
