--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/tabla-solicitud-novedad-contractual/tabla-solicitud-novedad-contractual.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/tabla-solicitud-novedad-contractual/tabla-solicitud-novedad-contractual.component.html
@@ -65,9 +65,13 @@
         Delvolver solicitud
         </button>
         <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-          [routerLink]="[ 'verDetalleSolicitudNovedadInterventoria', element.id ]">
+          [routerLink]="[ 'verDetalleEditarSolicitudNovedadInterventoria', element.id ]">
           Ver detalle/Editar
         </a>
+        <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
+        [routerLink]="[ 'verDetalleSolicitudNovedadInterventoria', element.id ]">
+        Ver detalle
+      </a>
       </td>
     </ng-container>
 
