--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/home/home.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/home/home.component.html
@@ -5,7 +5,7 @@
     </a>
   </div>
   <h1 class="title-menu--h1">
-    Verificar solicitud de novedades
+    Validar solicitud de novedades
   </h1>
   <button mat-mini-fab color="primary" class="btn-info" (click)="verAyuda = !verAyuda">?</button>
 
