--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/razon-tipo-actualizacion-rapg/razon-tipo-actualizacion-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/razon-tipo-actualizacion-rapg/razon-tipo-actualizacion-rapg.component.html
@@ -95,7 +95,7 @@
                     " />
                 </span>
             </div>
-            <div *ngIf="this.obj1 == true">
+            <div *ngIf="this.obj1 == true" class="animatedDown">
                 <mat-card-title class="header-card--text alineacion-titulos2 mt-1em" style="padding-left: 0px; text-align: left;">
                     Buen manejo y correcta inversión del anticipo
                 </mat-card-title>
@@ -139,7 +139,7 @@
                     </button>
                 </div>
             </div>
-            <div *ngIf="this.obj2 == true">
+            <div *ngIf="this.obj2 == true" class="animatedDown">
                 <mat-card-title class="header-card--text alineacion-titulos2 mt-1em" style="padding-left: 0px; text-align: left;">
                     Garantía de estabilidad y calidad de la obra
                 </mat-card-title>
