--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/revision-aprobacion-rapg/revision-aprobacion-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/revision-aprobacion-rapg/revision-aprobacion-rapg.component.html
@@ -66,7 +66,7 @@
                         </div>
                     </div>
                 </div>
-                <div *ngIf="
+                <div class="animatedDown" *ngIf="
               addressForm.controls.estadoRevision.value && addressForm.controls.estadoRevision.value.codigo == '2'
             ">
                     <h2 class="card-subTitle">Aprobación</h2>
