--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/observaciones-especificas-rapg/observaciones-especificas-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/observaciones-especificas-rapg/observaciones-especificas-rapg.component.html
@@ -25,7 +25,7 @@
             " />
         </span>
     </div>
-    <div class="d-flex align-items-center mtop" *ngIf="addressForm.get('tieneObservaciones').value === true">
+    <div class="d-flex align-items-center mtop animatedDown" *ngIf="addressForm.get('tieneObservaciones').value === true">
         <div class="text-area-quill izqTitle helperWidthText" [class.color-secondaryColor]="
             (addressForm.get('observacionesEspecificas').invalid && addressForm.get('observacionesEspecificas').touched) ||
             (addressForm.get('observacionesEspecificas').invalid && estaEditando)
