--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/gestionar-solicitud-rlc/gestionar-solicitud-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/gestionar-solicitud-rlc/gestionar-solicitud-rlc.component.html
@@ -111,7 +111,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row" *ngIf="addressForm.get('fechaEnvioFirmaContratista').value!=null">
+                <div class="row animatedDown" *ngIf="addressForm.get('fechaEnvioFirmaContratista').value!=null">
                     <div class="col-md-8">
                         <div class="row">
                             <div class="pr-1">
@@ -145,7 +145,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row" *ngIf="addressForm.get('fechaFirmaParteContratista').value!=null">
+                <div class="row animatedDown" *ngIf="addressForm.get('fechaFirmaParteContratista').value!=null">
                     <div class="col-md-8">
                         <div class="row">
                             <div class="pr-1">
@@ -179,7 +179,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row" *ngIf="addressForm.get('fechaEnvioFirmaFiduciaria').value!=null">
+                <div class="row animatedDown" *ngIf="addressForm.get('fechaEnvioFirmaFiduciaria').value!=null">
                     <div class="col-md-8">
                         <div class="row">
                             <div class="pr-1">
@@ -213,7 +213,7 @@
                         </div>
                     </div>
                 </div>
-                <div>
+                <div class="animatedDown">
                     <div class="row">
                         <div class="col-md-12" style="padding-left: 0;">
                             <div class="row">
@@ -257,7 +257,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row" *ngIf="addressForm.get('fechaFirmaParteFiduciaria').value!=null">
+                <div class="row animatedDown" *ngIf="addressForm.get('fechaFirmaParteFiduciaria').value!=null">
                     <div class="col-md-12">
                         <div class="row">
                             <div class="pr-1">
