--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/gestion-calidad/gestion-calidad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/gestion-calidad/gestion-calidad.component.html
@@ -118,6 +118,7 @@
                                                         [min]="seguimientoSemanal.fechaInicio"
                                                         [max]="seguimientoSemanal.fechaFin"
                                                         (click)="pickerfechaToma.open()"
+                                                        (ngModelChange)="getMaxDate( $event )"
                                                         readonly required>
                                                 <mat-datepicker #pickerfechaToma></mat-datepicker>
                                             </mat-form-field>
